--- a/react/package.json
+++ b/react/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "CHANGE_ME",
-  "version": "0.0.0",
+  "name": "button-up",
+  "version": "0.0.1",
   "scripts": {
     "test": "vtex-test-tools test"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "apollo-client": "^2.6.8",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
@@ -20,6 +21,8 @@
     "@vtex/tsconfig": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.5",
     "graphql": "^14.6.0",
-    "typescript": "^3.9.6"
+    "prop-types": "^15.8.1",
+    "react-icons": "^4.7.1",
+    "typescript": "3.9.7"
   }
 }
